--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ https://templatemo.com/tm-543-breezed
                     <div class="owl-carousel owl-theme">
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets/images/member-item-01.JPEG" alt="">
+                                <img src="assets/images/member-item-01aa.jpeg" alt="">
                                 <div class="hover-effect">
                                     <div class="hover-content">
                                         <ul>
@@ -410,7 +410,7 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets/images/member-item-05.JPEG" alt="">
+                                <img src="assets/images/member-item-05ss.jpeg" alt="">
                                 <div class="hover-effect">
                                     <div class="hover-content">
                                         <ul>
