--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ https://templatemo.com/tm-543-breezed
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div class="service-item">
-                                    <img src="assets/images/contact-info-03.JPG" alt="">
+                                    <img src="assets/images/contact-info-03ee.jpg" alt="">
                                     <h4>le gustaria..</h4>
                                 </div>
                             </div>
@@ -204,7 +204,7 @@ https://templatemo.com/tm-543-breezed
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
-                            <img src="assets/images/features-icon-1.jpg" alt="">
+                            <img src="assets/images/features-icon-1rr.jpg" alt="">
                         </div>
                         <div class="features-content">
                             <h4>INICIAR UNA VIDA JUNTOS</h4>
@@ -367,7 +367,7 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets/images/member-item-04.JPEG" alt="">
+                                <img src="assets/images/member-item-04.jpeg" alt="">
                                 
                             </div>
                             <h4></h4>
@@ -375,7 +375,7 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets/images/member-item-02.JPEG" alt="">
+                                <img src="assets/images/member-item-02.jpeg" alt="">
                                 
                             </div>
                             <h4>Enculada jaja</h4>
