--- a/index.html
+++ b/index.html
@@ -319,22 +319,22 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all gra">
                           <div class="item">
-                            <a href="assets/images/project-big-item-03.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-item-03.jpg" alt=""></a>
+                            <a href="assets/images/project-item-03.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-item-03.jpg" alt=""></a>
                           </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all tsh">
                           <div class="item">
-                            <a href="assets/images/project-big-item-04.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-item-04.jpg" alt=""></a>
+                            <a href="assets/images/project-item-04.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-item-04.jpg" alt=""></a>
                           </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all dev">
                           <div class="item">
-                            <a href="assets/images/project-big-item-05.JPEG" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-item-05.JPEG" alt=""></a>
+                            <a href="assets/images/project-item-05uu.jpeg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-item-05uu.jpeg" alt=""></a>
                           </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all des">
                           <div class="item">
-                            <a href="assets/images/project-big-item-06.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-item-06.jpg" alt=""></a>
+                            <a href="assets/images/project-item-06.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-item-06.jpg" alt=""></a>
                           </div>
                         </div>
                     </div>
