--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets/images/member-item-04.jpeg" alt="">
+                                <img src="assets/images/member-item-04aa.JPEG" alt="">
                                 
                             </div>
                             <h4></h4>
@@ -375,7 +375,7 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets/images/member-item-02.jpeg" alt="">
+                                <img src="assets/images/member-item-02aa.JPEG" alt="">
                                 
                             </div>
                             <h4>Enculada jaja</h4>
