--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ https://templatemo.com/tm-543-breezed
                             <h4>Consulado</h4>
                             <span>Aqui te espere como 10 horas y mori de hambre pero aun que me estafaron con 100 del parkin me la pase muy agusto a tu lado, te amo mucho mi bb chikita</span>
                         </div>
-                        
+                        </div>
                     </div>
                 </div>
             </div>
